src/antlr/ArubickParser.ts
// Generated from src/antlr/Arubick.g4 by ANTLR 4.6-SNAPSHOT


import { ATN } from 'antlr4ts/atn/ATN';
import { ATNDeserializer } from 'antlr4ts/atn/ATNDeserializer';
import { FailedPredicateException } from 'antlr4ts/FailedPredicateException';
import { NotNull } from 'antlr4ts/Decorators';
import { NoViableAltException } from 'antlr4ts/NoViableAltException';
import { Override } from 'antlr4ts/Decorators';
import { Parser } from 'antlr4ts/Parser';
import { ParserRuleContext } from 'antlr4ts/ParserRuleContext';
import { ParserATNSimulator } from 'antlr4ts/atn/ParserATNSimulator';
import { ParseTreeListener } from 'antlr4ts/tree/ParseTreeListener';
import { ParseTreeVisitor } from 'antlr4ts/tree/ParseTreeVisitor';
import { RecognitionException } from 'antlr4ts/RecognitionException';
import { RuleContext } from 'antlr4ts/RuleContext';
import { RuleVersion } from 'antlr4ts/RuleVersion';
import { TerminalNode } from 'antlr4ts/tree/TerminalNode';
import { Token } from 'antlr4ts/Token';
import { TokenStream } from 'antlr4ts/TokenStream';
import { Vocabulary } from 'antlr4ts/Vocabulary';
import { VocabularyImpl } from 'antlr4ts/VocabularyImpl';

import * as Utils from 'antlr4ts/misc/Utils';

import { ArubickListener } from './ArubickListener';
import { ArubickVisitor } from './ArubickVisitor';


export class ArubickParser extends Parser {
	public static readonly T__0=1;
	public static readonly T__1=2;
	public static readonly T__2=3;
	public static readonly T__3=4;
	public static readonly T__4=5;
	public static readonly WS=6;
	public static readonly EOL=7;
	public static readonly DEF=8;
	public static readonly IF=9;
	public static readonly ELSE=10;
	public static readonly IS=11;
	public static readonly AWAIT=12;
	public static readonly AND=13;
	public static readonly OR=14;
	public static readonly LBRACKET=15;
	public static readonly RBRACKET=16;
	public static readonly LPARENT=17;
	public static readonly RPARENT=18;
	public static readonly LSCOPE=19;
	public static readonly RSCOPE=20;
	public static readonly ASSIGN=21;
	public static readonly STRING=22;
	public static readonly NUMBER=23;
	public static readonly ID=24;
	public static readonly RULE_storage = 0;
	public static readonly RULE_defStorage = 1;
	public static readonly RULE_variable = 2;
	public static readonly RULE_defVariable = 3;
	public static readonly RULE_accessVariable = 4;
	public static readonly RULE_assign = 5;
	public static readonly RULE_methodParameters = 6;
	public static readonly RULE_methodCall = 7;
	public static readonly RULE_comparison = 8;
	public static readonly RULE_expression = 9;
	public static readonly RULE_array = 10;
	public static readonly RULE_elseStatement = 11;
	public static readonly RULE_ifStatement = 12;
	public static readonly RULE_statement = 13;
	public static readonly RULE_botDefinition = 14;
	public static readonly RULE_main = 15;
	public static readonly RULE_program = 16;
	public static readonly ruleNames: string[] = [
		"storage", "defStorage", "variable", "defVariable", "accessVariable", 
		"assign", "methodParameters", "methodCall", "comparison", "expression", 
		"array", "elseStatement", "ifStatement", "statement", "botDefinition", 
		"main", "program"
	];

	private static readonly _LITERAL_NAMES: (string | undefined)[] = [
		undefined, "'/'", "'.'", "','", "':'", "'main'", undefined, undefined, 
		"'def'", "'if'", "'else'", "'is'", "'await'", "'and'", "'or'", "'['", 
		"']'", "'('", "')'", "'{'", "'}'", "'='"
	];
	private static readonly _SYMBOLIC_NAMES: (string | undefined)[] = [
		undefined, undefined, undefined, undefined, undefined, undefined, "WS", 
		"EOL", "DEF", "IF", "ELSE", "IS", "AWAIT", "AND", "OR", "LBRACKET", "RBRACKET", 
		"LPARENT", "RPARENT", "LSCOPE", "RSCOPE", "ASSIGN", "STRING", "NUMBER", 
		"ID"
	];
	public static readonly VOCABULARY: Vocabulary = new VocabularyImpl(ArubickParser._LITERAL_NAMES, ArubickParser._SYMBOLIC_NAMES, []);

	@Override
	@NotNull
	public get vocabulary(): Vocabulary {
		return ArubickParser.VOCABULARY;
	}

	@Override
	public get grammarFileName(): string { return "Arubick.g4"; }

	@Override
	public get ruleNames(): string[] { return ArubickParser.ruleNames; }

	@Override
	public get serializedATN(): string { return ArubickParser._serializedATN; }

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(ArubickParser._ATN, this);
	}
	@RuleVersion(0)
	public storage(): StorageContext {
		let _localctx: StorageContext = new StorageContext(this._ctx, this.state);
		this.enterRule(_localctx, 0, ArubickParser.RULE_storage);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 34;
			this.match(ArubickParser.ID);
			this.state = 35;
			this.match(ArubickParser.T__0);
			this.state = 36;
			this.match(ArubickParser.ID);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	@RuleVersion(0)
	public defStorage(): DefStorageContext {
		let _localctx: DefStorageContext = new DefStorageContext(this._ctx, this.state);
		this.enterRule(_localctx, 2, ArubickParser.RULE_defStorage);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 38;
			this.match(ArubickParser.DEF);
			this.state = 39;
			this.storage();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	@RuleVersion(0)
	public variable(): VariableContext {
		let _localctx: VariableContext = new VariableContext(this._ctx, this.state);
		this.enterRule(_localctx, 4, ArubickParser.RULE_variable);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 41;
			this.match(ArubickParser.ID);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	@RuleVersion(0)
	public defVariable(): DefVariableContext {
		let _localctx: DefVariableContext = new DefVariableContext(this._ctx, this.state);
		this.enterRule(_localctx, 6, ArubickParser.RULE_defVariable);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 43;
			this.match(ArubickParser.DEF);
			this.state = 44;
			this.variable();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	@RuleVersion(0)
	public accessVariable(): AccessVariableContext {
		let _localctx: AccessVariableContext = new AccessVariableContext(this._ctx, this.state);
		this.enterRule(_localctx, 8, ArubickParser.RULE_accessVariable);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 46;
			this.variable();
			this.state = 49; 
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			do {
				{
				{
				this.state = 47;
				this.match(ArubickParser.T__1);
				this.state = 48;
				this.variable();
				}
				}
				this.state = 51; 
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			} while ( _la===ArubickParser.T__1 );
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	@RuleVersion(0)
	public assign(): AssignContext {
		let _localctx: AssignContext = new AssignContext(this._ctx, this.state);
		this.enterRule(_localctx, 10, ArubickParser.RULE_assign);
		try {
			this.state = 69;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input,1,this._ctx) ) {
			case 1:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 53;
				this.storage();
				this.state = 54;
				this.match(ArubickParser.ASSIGN);
				this.state = 55;
				this.expression();
				}
				break;

			case 2:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 57;
				this.defStorage();
				this.state = 58;
				this.match(ArubickParser.ASSIGN);
				this.state = 59;
				this.expression();
				}
				break;

			case 3:
				this.enterOuterAlt(_localctx, 3);
				{
				this.state = 61;
				this.variable();
				this.state = 62;
				this.match(ArubickParser.ASSIGN);
				this.state = 63;
				this.expression();
				}
				break;

			case 4:
				this.enterOuterAlt(_localctx, 4);
				{
				this.state = 65;
				this.defVariable();
				this.state = 66;
				this.match(ArubickParser.ASSIGN);
				this.state = 67;
				this.expression();
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	@RuleVersion(0)
	public methodParameters(): MethodParametersContext {
		let _localctx: MethodParametersContext = new MethodParametersContext(this._ctx, this.state);
		this.enterRule(_localctx, 12, ArubickParser.RULE_methodParameters);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 71;
			this.expression();
			this.state = 76;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la===ArubickParser.T__2) {
				{
				{
				this.state = 72;
				this.match(ArubickParser.T__2);
				this.state = 73;
				this.expression();
				}
				}
				this.state = 78;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	@RuleVersion(0)
	public methodCall(): MethodCallContext {
		let _localctx: MethodCallContext = new MethodCallContext(this._ctx, this.state);
		this.enterRule(_localctx, 14, ArubickParser.RULE_methodCall);
		let _la: number;
		try {
			this.state = 99;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input,7,this._ctx) ) {
			case 1:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 80;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la===ArubickParser.AWAIT) {
					{
					this.state = 79;
					this.match(ArubickParser.AWAIT);
					}
				}

				this.state = 82;
				this.storage();
				this.state = 83;
				this.match(ArubickParser.LPARENT);
				this.state = 85;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << ArubickParser.AWAIT) | (1 << ArubickParser.LBRACKET) | (1 << ArubickParser.STRING) | (1 << ArubickParser.NUMBER) | (1 << ArubickParser.ID))) !== 0)) {
					{
					this.state = 84;
					this.methodParameters();
					}
				}

				this.state = 87;
				this.match(ArubickParser.RPARENT);
				}
				break;

			case 2:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 90;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la===ArubickParser.AWAIT) {
					{
					this.state = 89;
					this.match(ArubickParser.AWAIT);
					}
				}

				this.state = 92;
				this.variable();
				this.state = 93;
				this.match(ArubickParser.LPARENT);
				this.state = 95;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << ArubickParser.AWAIT) | (1 << ArubickParser.LBRACKET) | (1 << ArubickParser.STRING) | (1 << ArubickParser.NUMBER) | (1 << ArubickParser.ID))) !== 0)) {
					{
					this.state = 94;
					this.methodParameters();
					}
				}

				this.state = 97;
				this.match(ArubickParser.RPARENT);
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	@RuleVersion(0)
	public comparison(): ComparisonContext {
		let _localctx: ComparisonContext = new ComparisonContext(this._ctx, this.state);
		this.enterRule(_localctx, 16, ArubickParser.RULE_comparison);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 101;
			this.variable();
			this.state = 102;
			this.match(ArubickParser.IS);
			this.state = 105;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input,8,this._ctx) ) {
			case 1:
				{
				this.state = 103;
				this.expression();
				}
				break;

			case 2:
				{
				this.state = 104;
				this.storage();
				}
				break;
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	@RuleVersion(0)
	public expression(): ExpressionContext {
		let _localctx: ExpressionContext = new ExpressionContext(this._ctx, this.state);
		this.enterRule(_localctx, 18, ArubickParser.RULE_expression);
		try {
			this.state = 113;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input,9,this._ctx) ) {
			case 1:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 107;
				this.match(ArubickParser.STRING);
				}
				break;

			case 2:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 108;
				this.match(ArubickParser.NUMBER);
				}
				break;

			case 3:
				this.enterOuterAlt(_localctx, 3);
				{
				this.state = 109;
				this.variable();
				}
				break;

			case 4:
				this.enterOuterAlt(_localctx, 4);
				{
				this.state = 110;
				this.accessVariable();
				}
				break;

			case 5:
				this.enterOuterAlt(_localctx, 5);
				{
				this.state = 111;
				this.methodCall();
				}
				break;

			case 6:
				this.enterOuterAlt(_localctx, 6);
				{
				this.state = 112;
				this.array();
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	@RuleVersion(0)
	public array(): ArrayContext {
		let _localctx: ArrayContext = new ArrayContext(this._ctx, this.state);
		this.enterRule(_localctx, 20, ArubickParser.RULE_array);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 115;
			this.match(ArubickParser.LBRACKET);
			this.state = 116;
			this.expression();
			this.state = 121;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la===ArubickParser.T__2) {
				{
				{
				this.state = 117;
				this.match(ArubickParser.T__2);
				this.state = 118;
				this.expression();
				}
				}
				this.state = 123;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 124;
			this.match(ArubickParser.RBRACKET);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	@RuleVersion(0)
	public elseStatement(): ElseStatementContext {
		let _localctx: ElseStatementContext = new ElseStatementContext(this._ctx, this.state);
		this.enterRule(_localctx, 22, ArubickParser.RULE_elseStatement);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 126;
			this.match(ArubickParser.ELSE);
			this.state = 127;
			this.match(ArubickParser.LSCOPE);
			this.state = 131;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << ArubickParser.DEF) | (1 << ArubickParser.IF) | (1 << ArubickParser.AWAIT) | (1 << ArubickParser.ID))) !== 0)) {
				{
				{
				this.state = 128;
				this.statement();
				}
				}
				this.state = 133;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 134;
			this.match(ArubickParser.RSCOPE);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	@RuleVersion(0)
	public ifStatement(): IfStatementContext {
		let _localctx: IfStatementContext = new IfStatementContext(this._ctx, this.state);
		this.enterRule(_localctx, 24, ArubickParser.RULE_ifStatement);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 136;
			this.match(ArubickParser.IF);
			this.state = 137;
			this.comparison();
			this.state = 142;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la===ArubickParser.AND || _la===ArubickParser.OR) {
				{
				{
				this.state = 138;
				_la = this._input.LA(1);
				if ( !(_la===ArubickParser.AND || _la===ArubickParser.OR) ) {
				this._errHandler.recoverInline(this);
				} else {
					if (this._input.LA(1) === Token.EOF) {
						this.matchedEOF = true;
					}

					this._errHandler.reportMatch(this);
					this.consume();
				}
				this.state = 139;
				this.comparison();
				}
				}
				this.state = 144;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 145;
			this.match(ArubickParser.LSCOPE);
			this.state = 149;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << ArubickParser.DEF) | (1 << ArubickParser.IF) | (1 << ArubickParser.AWAIT) | (1 << ArubickParser.ID))) !== 0)) {
				{
				{
				this.state = 146;
				this.statement();
				}
				}
				this.state = 151;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 152;
			this.match(ArubickParser.RSCOPE);
			this.state = 154;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la===ArubickParser.ELSE) {
				{
				this.state = 153;
				this.elseStatement();
				}
			}

			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	@RuleVersion(0)
	public statement(): StatementContext {
		let _localctx: StatementContext = new StatementContext(this._ctx, this.state);
		this.enterRule(_localctx, 26, ArubickParser.RULE_statement);
		try {
			this.state = 159;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input,15,this._ctx) ) {
			case 1:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 156;
				this.assign();
				}
				break;

			case 2:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 157;
				this.methodCall();
				}
				break;

			case 3:
				this.enterOuterAlt(_localctx, 3);
				{
				this.state = 158;
				this.ifStatement();
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	@RuleVersion(0)
	public botDefinition(): BotDefinitionContext {
		let _localctx: BotDefinitionContext = new BotDefinitionContext(this._ctx, this.state);
		this.enterRule(_localctx, 28, ArubickParser.RULE_botDefinition);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 161;
			this.match(ArubickParser.ID);
			this.state = 162;
			this.match(ArubickParser.T__3);
			this.state = 163;
			this.match(ArubickParser.NUMBER);
			this.state = 168;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la===ArubickParser.T__1) {
				{
				{
				this.state = 164;
				this.match(ArubickParser.T__1);
				this.state = 165;
				this.match(ArubickParser.NUMBER);
				}
				}
				this.state = 170;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	@RuleVersion(0)
	public main(): MainContext {
		let _localctx: MainContext = new MainContext(this._ctx, this.state);
		this.enterRule(_localctx, 30, ArubickParser.RULE_main);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 171;
			this.match(ArubickParser.T__4);
			this.state = 172;
			this.match(ArubickParser.LSCOPE);
			this.state = 176;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << ArubickParser.DEF) | (1 << ArubickParser.IF) | (1 << ArubickParser.AWAIT) | (1 << ArubickParser.ID))) !== 0)) {
				{
				{
				this.state = 173;
				this.statement();
				}
				}
				this.state = 178;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 179;
			this.match(ArubickParser.RSCOPE);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	@RuleVersion(0)
	public program(): ProgramContext {
		let _localctx: ProgramContext = new ProgramContext(this._ctx, this.state);
		this.enterRule(_localctx, 32, ArubickParser.RULE_program);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 181;
			this.botDefinition();
			this.state = 185;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << ArubickParser.DEF) | (1 << ArubickParser.IF) | (1 << ArubickParser.AWAIT) | (1 << ArubickParser.ID))) !== 0)) {
				{
				{
				this.state = 182;
				this.statement();
				}
				}
				this.state = 187;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 188;
			this.main();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}

	public static __ATN: ATN;
	public static get _ATN(): ATN {
		if (!ArubickParser.__ATN) {
			ArubickParser.__ATN = new ATNDeserializer().deserialize(Utils.toCharArray(ArubickParser._serializedATN));
		}

		return ArubickParser.__ATN;
	}

}

export class StorageContext extends ParserRuleContext {
	public ID(): TerminalNode[];
	public ID(i: number): TerminalNode;
	public ID(i?: number): TerminalNode | TerminalNode[] {
		if (i === undefined) {
			return this.getTokens(ArubickParser.ID);
		} else {
			return this.getToken(ArubickParser.ID, i);
		}
	}
	constructor(parent: ParserRuleContext, invokingState: number);
	constructor(parent: ParserRuleContext, invokingState: number) {
		super(parent, invokingState);

	}
	@Override public get ruleIndex(): number { return ArubickParser.RULE_storage; }
	@Override
	public enterRule(listener: ArubickListener): void {
		if (listener.enterStorage) listener.enterStorage(this);
	}
	@Override
	public exitRule(listener: ArubickListener): void {
		if (listener.exitStorage) listener.exitStorage(this);
	}
	@Override
	public accept<Result>(visitor: ArubickVisitor<Result>): Result {
		if (visitor.visitStorage) return visitor.visitStorage(this);
		else return visitor.visitChildren(this);
	}
}


export class DefStorageContext extends ParserRuleContext {
	public DEF(): TerminalNode { return this.getToken(ArubickParser.DEF, 0); }
	public storage(): StorageContext {
		return this.getRuleContext(0, StorageContext);
	}
	constructor(parent: ParserRuleContext, invokingState: number);
	constructor(parent: ParserRuleContext, invokingState: number) {
		super(parent, invokingState);

	}
	@Override public get ruleIndex(): number { return ArubickParser.RULE_defStorage; }
	@Override
	public enterRule(listener: ArubickListener): void {
		if (listener.enterDefStorage) listener.enterDefStorage(this);
	}
	@Override
	public exitRule(listener: ArubickListener): void {
		if (listener.exitDefStorage) listener.exitDefStorage(this);
	}
	@Override
	public accept<Result>(visitor: ArubickVisitor<Result>): Result {
		if (visitor.visitDefStorage) return visitor.visitDefStorage(this);
		else return visitor.visitChildren(this);
	}
}


export class VariableContext extends ParserRuleContext {
	public ID(): TerminalNode { return this.getToken(ArubickParser.ID, 0); }
	constructor(parent: ParserRuleContext, invokingState: number);
	constructor(parent: ParserRuleContext, invokingState: number) {
		super(parent, invokingState);

	}
	@Override public get ruleIndex(): number { return ArubickParser.RULE_variable; }
	@Override
	public enterRule(listener: ArubickListener): void {
		if (listener.enterVariable) listener.enterVariable(this);
	}
	@Override
	public exitRule(listener: ArubickListener): void {
		if (listener.exitVariable) listener.exitVariable(this);
	}
	@Override
	public accept<Result>(visitor: ArubickVisitor<Result>): Result {
		if (visitor.visitVariable) return visitor.visitVariable(this);
		else return visitor.visitChildren(this);
	}
}


export class DefVariableContext extends ParserRuleContext {
	public DEF(): TerminalNode { return this.getToken(ArubickParser.DEF, 0); }
	public variable(): VariableContext {
		return this.getRuleContext(0, VariableContext);
	}
	constructor(parent: ParserRuleContext, invokingState: number);
	constructor(parent: ParserRuleContext, invokingState: number) {
		super(parent, invokingState);

	}
	@Override public get ruleIndex(): number { return ArubickParser.RULE_defVariable; }
	@Override
	public enterRule(listener: ArubickListener): void {
		if (listener.enterDefVariable) listener.enterDefVariable(this);
	}
	@Override
	public exitRule(listener: ArubickListener): void {
		if (listener.exitDefVariable) listener.exitDefVariable(this);
	}
	@Override
	public accept<Result>(visitor: ArubickVisitor<Result>): Result {
		if (visitor.visitDefVariable) return visitor.visitDefVariable(this);
		else return visitor.visitChildren(this);
	}
}


export class AccessVariableContext extends ParserRuleContext {
	public variable(): VariableContext[];
	public variable(i: number): VariableContext;
	public variable(i?: number): VariableContext | VariableContext[] {
		if (i === undefined) {
			return this.getRuleContexts(VariableContext);
		} else {
			return this.getRuleContext(i, VariableContext);
		}
	}
	constructor(parent: ParserRuleContext, invokingState: number);
	constructor(parent: ParserRuleContext, invokingState: number) {
		super(parent, invokingState);

	}
	@Override public get ruleIndex(): number { return ArubickParser.RULE_accessVariable; }
	@Override
	public enterRule(listener: ArubickListener): void {
		if (listener.enterAccessVariable) listener.enterAccessVariable(this);
	}
	@Override
	public exitRule(listener: ArubickListener): void {
		if (listener.exitAccessVariable) listener.exitAccessVariable(this);
	}
	@Override
	public accept<Result>(visitor: ArubickVisitor<Result>): Result {
		if (visitor.visitAccessVariable) return visitor.visitAccessVariable(this);
		else return visitor.visitChildren(this);
	}
}


export class AssignContext extends ParserRuleContext {
	public storage(): StorageContext | undefined {
		return this.tryGetRuleContext(0, StorageContext);
	}
	public ASSIGN(): TerminalNode { return this.getToken(ArubickParser.ASSIGN, 0); }
	public expression(): ExpressionContext {
		return this.getRuleContext(0, ExpressionContext);
	}
	public defStorage(): DefStorageContext | undefined {
		return this.tryGetRuleContext(0, DefStorageContext);
	}
	public variable(): VariableContext | undefined {
		return this.tryGetRuleContext(0, VariableContext);
	}
	public defVariable(): DefVariableContext | undefined {
		return this.tryGetRuleContext(0, DefVariableContext);
	}
	constructor(parent: ParserRuleContext, invokingState: number);
	constructor(parent: ParserRuleContext, invokingState: number) {
		super(parent, invokingState);

	}
	@Override public get ruleIndex(): number { return ArubickParser.RULE_assign; }
	@Override
	public enterRule(listener: ArubickListener): void {
		if (listener.enterAssign) listener.enterAssign(this);
	}
	@Override
	public exitRule(listener: ArubickListener): void {
		if (listener.exitAssign) listener.exitAssign(this);
	}
	@Override
	public accept<Result>(visitor: ArubickVisitor<Result>): Result {
		if (visitor.visitAssign) return visitor.visitAssign(this);
		else return visitor.visitChildren(this);
	}
}


export class MethodParametersContext extends ParserRuleContext {
	public expression(): ExpressionContext[];
	public expression(i: number): ExpressionContext;
	public expression(i?: number): ExpressionContext | ExpressionContext[] {
		if (i === undefined) {
			return this.getRuleContexts(ExpressionContext);
		} else {
			return this.getRuleContext(i, ExpressionContext);
		}
	}
	constructor(parent: ParserRuleContext, invokingState: number);
	constructor(parent: ParserRuleContext, invokingState: number) {
		super(parent, invokingState);

	}
	@Override public get ruleIndex(): number { return ArubickParser.RULE_methodParameters; }
	@Override
	public enterRule(listener: ArubickListener): void {
		if (listener.enterMethodParameters) listener.enterMethodParameters(this);
	}
	@Override
	public exitRule(listener: ArubickListener): void {
		if (listener.exitMethodParameters) listener.exitMethodParameters(this);
	}
	@Override
	public accept<Result>(visitor: ArubickVisitor<Result>): Result {
		if (visitor.visitMethodParameters) return visitor.visitMethodParameters(this);
		else return visitor.visitChildren(this);
	}
}

